tests/e2e/e0061_invalid_char_slash.error
Error: syntax error in story at line 1, column 5

1|    c = a/b
          ^^^

E0061: Invalid path name: `a/b`. Path names can't contain `/`
